; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_extmod_statistics.c_extmod_statistics_incr_thread_set_state.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_extmod_statistics.c_extmod_statistics_incr_thread_set_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i32, i32 }
%struct.TYPE_10__ = type { i32 }

@kernel_task = common dso_local global %struct.TYPE_9__* null, align 8
@THREAD_NULL = common dso_local global i64 0, align 8
@TASK_NULL = common dso_local global %struct.TYPE_9__* null, align 8
@host_extmod_statistics = common dso_local global %struct.TYPE_10__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @extmod_statistics_incr_thread_set_state(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.TYPE_9__*, align 8
  %4 = alloca %struct.TYPE_9__*, align 8
  store i64 %0, i64* %2, align 8
  %5 = call %struct.TYPE_9__* (...) @current_task()
  store %struct.TYPE_9__* %5, %struct.TYPE_9__** %3, align 8
  %6 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %7 = load %struct.TYPE_9__*, %struct.TYPE_9__** @kernel_task, align 8
  %8 = icmp eq %struct.TYPE_9__* %6, %7
  br i1 %8, label %13, label %9

9:                                                ; preds = %1
  %10 = load i64, i64* %2, align 8
  %11 = load i64, i64* @THREAD_NULL, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %9, %1
  br label %37

14:                                               ; preds = %9
  %15 = load i64, i64* %2, align 8
  %16 = call %struct.TYPE_9__* @get_threadtask(i64 %15)
  store %struct.TYPE_9__* %16, %struct.TYPE_9__** %4, align 8
  %17 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %18 = load %struct.TYPE_9__*, %struct.TYPE_9__** @TASK_NULL, align 8
  %19 = icmp eq %struct.TYPE_9__* %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %14
  br label %37

21:                                               ; preds = %14
  %22 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %23 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %24 = icmp ne %struct.TYPE_9__* %22, %23
  br i1 %24, label %25, label %37

25:                                               ; preds = %21
  %26 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %27 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %28, align 4
  %31 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %32 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %31, i32 0, i32 0
  %33 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* %33, align 4
  %36 = call i32 @OSIncrementAtomic64(i32* getelementptr inbounds (%struct.TYPE_10__, %struct.TYPE_10__* @host_extmod_statistics, i32 0, i32 0))
  br label %37

37:                                               ; preds = %13, %20, %25, %21
  ret void
}

declare dso_local %struct.TYPE_9__* @current_task(...) #1

declare dso_local %struct.TYPE_9__* @get_threadtask(i64) #1

declare dso_local i32 @OSIncrementAtomic64(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
